--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
