--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.5.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "redux": "^4.2.1",
